# VU_Wireless_in_Automation

./: .gitignore  README.md
echo_client/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
echo_client/src/: bme680.c  common.h  echo-client.c
echo_server/: build.sh
echo_server/src/: common.h
sensor_unit/: CMakeLists.txt  build.sh  overlay-ot.conf  prj.conf
sensor_unit/src/: adc.c  coap.c  common.h  main.c  pir.c  sensors.c  udp.c
thermostat/: CMakeLists.txt  build.sh  overlay-display.conf  prj.conf
thermostat/src/: coap.c  common.h  display.c  echo-client.c  echo-server.c  hvac.c  main.c  thermostat.c  udp.c
